Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,3 +25,11 @@ steps:
 - script: npm run cy:run:chrome
   displayName: 'Run tests on Chrome'
   continueOnError: true
+
+- task: PublishTestResults@2
+  displayName: 'Exibindo resultads dos testes'
+  inputs:
+    testResultsFiles: '**/junit-*.xml'
+    mergeTestResults: true
+    testRunTitle: 'Agilizei N2'
+  continueOnError: true
